fixed responsive word spacing

--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -1,69 +1,78 @@
 .about {
-    font-family: 'Oswald', sans-serif;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    margin: 20px;
-    max-width: 100%;
-  }
+  font-family: 'Oswald', sans-serif;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin: 20px;
+  max-width: 100%;
+}
 
-  .about h1{
-    color: black;
-    font-size: 2.5rem;
-  }
-  .about-text{
-    text-align: justify;
-    font-size: x-large;
-  }
-  
-  .about-container {
-    height: 600px;
-    width: 1000px;
-    padding: 20px 30px;
-    background-color: grey;
-    border-radius: 20px;
-    margin: 15px;
-    position: relative;
-    overflow: auto;
-    text-align: center;
-    margin:auto
-  }
+.about h1{
+  color: black;
+  font-size: 2.5rem;
+}
 
-  .about-logo {
-    display: flex;
-    justify-content: space-evenly;
-  }
+.about-text{
+  text-align: center;
+  font-size: 1.5rem;
+}
 
-  .github-logo {
-    margin-left: 40%;
-    color: black
-  }
+.about-container {
+  height: 600px;
+  width: 1000px;
+  padding: 20px 30px;
+  background-color: grey;
+  border-radius: 20px;
+  margin: 15px;
+  position: relative;
+  overflow: auto;
+  text-align: center;
+  margin:auto;
+}
 
-  .linkedin-logo {
-    margin-right: 40%;
-    color: black
-  }
+.about-logo {
+  display: flex;
+  justify-content: space-evenly;
+}
 
+.github-logo {
+  margin-left: 40%;
+  color: black;
+}
+
+.linkedin-logo {
+  margin-right: 40%;
+  color: black;
+}
+
+.skills-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 20px;
+}
+
+.p-link {
+  color:white;
+}
+
+.p-link:hover {
+  text-decoration: underline;
+  color: blue;
+}
+
+@media (max-width: 768px) {
   .skills-grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 20px;
+    grid-template-columns: repeat(1, 1fr);
   }
 
-  .p-link {
-    color:white;
+  .about {
+    gap: 10px;
   }
 
-  .p-link:hover {
-    text-decoration: underline;
-    color: blue;
-    }
-  
-  @media (max-width: 768px) {
-    .skills-grid {
-      grid-template-columns: repeat(1, 1fr);
-    }
+  .about-text{
+    font-size: 1.2rem;
+    text-align: center;
   }
-
+}
