--- a/src/Pages/Projects/Projects.css
+++ b/src/Pages/Projects/Projects.css
@@ -50,7 +50,7 @@
 .project-description {
   font-size: 16px;
   margin-bottom: 10px;
-  text-align: justify;
+  text-align: center;
 }
 
 .project-image {
